src/test/resources/validation/error/insertNoRecordSet/schema.graphqls
input InsertInput {
  id: ID!
}

type Mutation {
  registerCustomerInput(input: InsertInput!): ID! @mutationType(typeName: INSERT)
}
